Solved some new Arraylist Problems (removeDuplicateNumber) [02/09/25]